--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <ul class="footer-links">
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
             </ul>
         </div>
     </footer>
