--- a/about.html
+++ b/about.html
@@ -179,7 +179,8 @@
         <div class="footer-container">
             <p>&copy; 2025 A.S. Second Choice. All Rights Reserved.</p>
             <p>📍 Dumuhi Chowk, Pirpainti Road, Godda, Amidha, Jharkhand 814133</p>
-            <p>📞 +91 6207179472</p>
+            <p>📞 +91 8789417424 📞 +91 9304713430</p>
+            <p>✉ amritanshushekharjha8789@gmail.com</p>
         </div>
     </footer>
 </body>
