Honda shine Updated

--- a/gallary.html
+++ b/gallary.html
@@ -120,6 +120,15 @@
     <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
       <img src="./assets/gallary/45.jpeg" alt="Image 10" class="w-full h-full object-contain" />
     </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/46.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/47.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/48.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
   </div>
   <br>
 
