--- a/gallary.html
+++ b/gallary.html
@@ -129,6 +129,18 @@
     <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
       <img src="./assets/gallary/48.jpeg" alt="Image 10" class="w-full h-full object-contain" />
     </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/49.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/50.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/51.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
+    <div class="relative w-full h-48 bg-gray-200 rounded-lg overflow-hidden flex items-center justify-center">
+      <img src="./assets/gallary/52.jpeg" alt="Image 10" class="w-full h-full object-contain" />
+    </div>
   </div>
   <br>
 
