Bike 3 and address update

--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
     <footer class="footer">
         <div class="footer-container">
             <p>&copy; 2025 A.S. Second Choice. All Rights Reserved.</p>
-            <p>📍 Dumuhi Chowk, Pirpainti Road, Godda, Amidha, Jharkhand 814133</p>
+            <p>📍 Dumuhi Chowk, Panchwati market, Pirpainti road Godda, Jharkhand 814133</p>
             <p>📞 +91 8789417424 📞 +91 9304713430</p>
             <p>✉ amritanshushekharjha8789@gmail.com</p>
         </div>
