--- a/gallary.html
+++ b/gallary.html
@@ -18,7 +18,7 @@
       </div>
       <div class="business-name">A.S. Second Choice</div>
       <div class="contact-info">
-        <p>Dumuhi Chowk, Pirpainti Road, Godda, Amidha, Jharkhand 814133</p>
+        <p>Dumuhi Chowk, Panchwati market, Pirpainti road Godda, Jharkhand 814133</p>
         <p>📞 +91 8789417424</p>
         <p>📞 +91 9304713430</p>
         <p>✉ amritanshushekharjha8789@gmail.com</p>
