--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
     <!-- Contact Info -->
     <section class="contact-info">
         <h2>Get in Touch</h2>
-        <p>📍 Location: Dumuhi Chowk, Pirpainti Road, Godda, Amidha, Jharkhand 814133</p>
+        <p>📍 Location: Dumuhi Chowk, Panchwati market, Pirpainti road Godda, Jharkhand 814133</p>
         <p> Call Us 📞 +91 8789417424 📞 +91 9304713430</p>
         <p>✉ amritanshushekharjha8789@gmail.com</p>
     </section>
